--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,35 +1,42 @@
-<html lang='en'>
+<html lang="en">
 
   <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Fund My Project!</title>
-    <link rel='stylesheet' href='/css/jass.css' />
-    <link rel='stylesheet' href='/css/style.css' />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nicks Tech Blog</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
   </head>
 
-  <body>
-    <div class='flex-column justify-space-around'>
-      <header class='display-flex justify-space-between align-center p-2'>
-        <h1>
-          <span role='img' aria-label='money'>💸</span>
-          <a href='/'>Fund My Project!</a>
-        </h1>
-        <nav>
-          <!-- Conditionally render login or logout links -->
-          {{#if logged_in}}
-            Welcome
-            {{user_name}}
-            |
-            <a href='/profile'>profile</a>
-            |
-            <button class='no-button' id='logout'>logout</button>
-          {{else}}
-            <a href='/login'>login</a>
-          {{/if}}
-        </nav>
-      </header>
-      <main class='container container-fluid mt-5'>
+  <body class="bg-secondary">
+    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+      <div class="container-fluid font-monospace">
+        <a class="navbar-brand" href="/">
+          <h1 class="display-3">🤖 Nicks Tech Blog</h1>
+        </a>
+        {{#if logged_in}}
+        <ul class="d-flex flex-row align-items-center">
+        <h2 class="text-white fs-3 mx-4">Welcome {{user_name}}!</h2>
+        <li class="nav-item">
+          <a class="nav-item text-white btn btn-secondary mx-4 fs-4" href='/profile'>Dashboard</a>
+        </li>
+        <button class="nav-item btn btn-secondary text-white mx-4 fs-4" id='logout'>Logout</button>
+        {{else}}
+        <li class="nav-item">
+          <a class="nav-item text-white fs-4 btn btn-secondary" href="/login">Login</a>
+        </li>
+      </ul>
+    </div>
+    {{/if}}
+    </nav>
+
+    
+      <main class="container container-fluid mt-5">
         <!-- Render the sub layout -->
         {{{body}}}
       </main>
@@ -40,8 +47,13 @@
 
     <!-- Render script for logged in users only -->
     {{#if logged_in}}
-      <script src='/js/logout.js'></script>
+      <script src="/js/logout.js"></script>
     {{/if}}
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 
 </html>
