--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,39 +1,35 @@
-<div class="row">
+<div class="row font-monospace">
   <div class="col-md-6">
     <h2>Login</h2>
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <input class="form-input my-1" type="text" placeholder="email" id="email-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <input class="form-input my-1" type="password" placeholder="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary mt-2" type="submit">login</button>
       </div>
     </form>
   </div>
+
   <div class="col-md-6">
     <h2>Signup</h2>
 
     <form class="form signup-form">
       <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <input class="form-input my-1" type="text" placeholder="username" id="name-signup" />
       </div>
       <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="form-input my-1" type="text" placeholder="email" id="email-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-input my-1" type="password" placeholder="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="btn btn-primary mt-2" type="submit">signup</button>
       </div>
     </form>
   </div>
