created models and back-end routes for posts, comments, and users

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
         <ul class="d-flex flex-row align-items-center">
         <h2 class="text-white fs-3 mx-4">Welcome {{user_name}}!</h2>
         <li class="nav-item">
-          <a class="nav-item text-white btn btn-secondary mx-4 fs-4" href='/profile'>Dashboard</a>
+          <a class="nav-item text-white btn btn-secondary mx-4 fs-4" href='/dashboard'>Dashboard</a>
         </li>
         <button class="nav-item btn btn-secondary text-white mx-4 fs-4" id='logout'>Logout</button>
         {{else}}
