--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <!-- Loop over each object in the projects array -->
 {{#each projects as |project| }}
-<div class="row mb-4 project bg-secondary">
+<div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
