created newPostHandler, editPostHandler, newCommentHandler, created handlebars for dashboard, post, and homepage

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,9 +13,9 @@
     />
   </head>
 
-  <body class="bg-secondary">
+  <body class="bg-secondary font-monospace">
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-      <div class="container-fluid font-monospace">
+      <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <h1 class="display-3">🤖 Nicks Tech Blog</h1>
         </a>
