--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,24 +1,26 @@
 <!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
-    </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
-    </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
-  </div>
-  <div class="col-md-7">
-    <p>
-      {{project.description}}
-    </p>
-  </div>
-</div>
-{{/each}}
+{{#if posts.length}}
+
+  {{#each posts as |post|}}
+    <div class="row">
+      <div class="col-12">
+        <a
+          class="text-white link-offset-2 link-underline link-underline-opacity-0"
+          href="/post/{{id}}"
+        >
+          <div class="card text-white bg-dark shadow mb-3">
+            <div class="text-center mx-auto p-3">
+              <h2 class="text-warning text-start pb-2">{{title}}</h2>
+              <p class="text-start">{{content}}</p>
+              <p class="text-warning text-start">Click to view more!</p>
+
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+  {{/each}}
+{{/if}}
+
+<script src="./js/post.js"></script>
