--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,16 @@
-<div class="row font-monospace">
+<div class="row">
   <div class="col-md-6">
     <h2>Login</h2>
 
     <form class="form login-form">
       <div class="form-group">
-        <input class="form-input my-1" type="text" placeholder="email" id="email-login" />
+        <input class="form-input my-1 bg-dark text-white" type="text" placeholder="email" id="email-login" />
       </div>
       <div class="form-group">
-        <input class="form-input my-1" type="password" placeholder="password" id="password-login" />
+        <input class="form-input my-1 bg-dark text-white" type="password" placeholder="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary mt-2" type="submit">login</button>
+        <button class="btn btn-dark mt-2 text-white" type="submit">login</button>
       </div>
     </form>
   </div>
@@ -20,16 +20,16 @@
 
     <form class="form signup-form">
       <div class="form-group">
-        <input class="form-input my-1" type="text" placeholder="username" id="name-signup" />
+        <input class="form-input my-1 bg-dark text-white" type="text" placeholder="username" id="name-signup" />
       </div>
       <div class="form-group">
-        <input class="form-input my-1" type="text" placeholder="email" id="email-signup" />
+        <input class="form-input my-1 bg-dark text-white" type="text" placeholder="email" id="email-signup" />
       </div>
       <div class="form-group">
-        <input class="form-input my-1" type="password" placeholder="password" id="password-signup" />
+        <input class="form-input my-1 bg-dark text-white" type="password" placeholder="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary mt-2" type="submit">signup</button>
+        <button class="btn btn-dark mt-2" type="submit">signup</button>
       </div>
     </form>
   </div>
