added comments to code, organized code structure on posts.js

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,6 +7,7 @@
       id='new-post-btn'
     >+ New Post</button>
   </div>
+  
   {{!-- modal --}}
   <div
   class='modal fade'
@@ -74,6 +75,8 @@
     </div>
   </div>
 </div>
+
+{{!-- modal --}}
 <div
   class='modal fade'
   id='editPostModal{{id}}'
