--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,7 +9,7 @@
           href="/post/{{id}}"
         >
           <div class="card text-white bg-dark shadow mb-3">
-            <div class="text-center mx-auto p-3">
+            <div class="text mx-auto p-3">
               <h2 class="text-warning text-start pb-2">{{title}}</h2>
               <p class="text-start">{{content}}</p>
               <p class="text-warning text-start">Click to view more!</p>
