fixed typo on main.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nicks Tech Blog</title>
+    <title>Nick's Tech Blog</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -17,7 +17,7 @@
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
-          <h1 class="display-3">🤖 Nicks Tech Blog</h1>
+          <h1 class="display-3">🤖 Nick's Tech Blog</h1>
         </a>
         {{#if logged_in}}
         <ul class="d-flex flex-row align-items-center">
